Fix titles on mobile

--- a/sass/_constants.sass
+++ b/sass/_constants.sass
@@ -21,7 +21,7 @@ $grid-gutter: 30px
 
 
 //colors
-$color-primary: #4BBEDD
+$color-primary: #e30613
 $color-secondary: #272252
 $color-txt-secondary: #9194B9
 
