--- a/sass/blocks/_shipping.sass
+++ b/sass/blocks/_shipping.sass
@@ -59,7 +59,9 @@
                 width: 75px 
                 margin-right: 29px 
 .shippingPseudo
+    left: -98px
     z-index: -1 !important
+    white-space: nowrap
     @media only screen and (max-width: 1098px)
         display: none
 +max-screen($breakpoint-sm)
